feature: add panel touch button

--- a/assets/dom/controlPanel.html
+++ b/assets/dom/controlPanel.html
@@ -40,20 +40,20 @@
     #controlPanel {
         border-radius: 5px;
         background-color: #f2f2f2;
-        padding: 20px;
+        margin: 20px;
         width: 500px;
         height: 500px;
         opacity:0.8;
     }
 </style>
 <div id="controlPanel">
-  <label for="target" style="font-size: 40px">Car UUID</label>
+  <label for="target" style="font-size: 40px; padding: 10px; margin: 10px;">Car UUID</label>
   <input type="text" id="targetUUID" placeholder="uuid">
 
-  <label for="tileX" style="font-size: 40px">X cordinate</label>
+  <label for="tileX" style="font-size: 40px; padding: 10px; margin: 10px;">X cordinate</label>
   <input type="number" id="tileX" placeholder="x">
   
-  <label for="tileY" style="font-size: 40px">Y cordinate</label>
+  <label for="tileY" style="font-size: 40px; padding: 10px; margin: 10px;">Y cordinate</label>
   <input type="number" id="tileY" placeholder="y">
 
   <input type="button" id="moveBtn" value="MOVE">
